log
Thu 28 Mar 2024 02:18:34 AM UTC: 
 tests:  0|6
total_score: 0/70
170b009
Fri 05 Apr 2024 05:14:40 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
943f503
Fri 05 Apr 2024 05:20:19 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8f86c8f
Fri 05 Apr 2024 06:42:40 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
37370ba
Fri 05 Apr 2024 06:43:37 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0aafeb2
Fri 05 Apr 2024 06:43:51 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
01d82b1
Fri 05 Apr 2024 06:44:54 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
859d113
Fri 05 Apr 2024 06:45:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2be7870
Fri 05 Apr 2024 06:46:06 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
74013c9
Sun 07 Apr 2024 02:09:42 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  9|3
total_score: 35/70
e62b1ae
Sun 07 Apr 2024 02:15:39 AM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
list.c:89:1: error: expected identifier or ‘(’ before ‘}’ token
   89 | }
      | ^
Compilation failed
74c7f9a
